--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -2,3 +2,7 @@ db.url=jdbc:mysql://localhost:3306/railway_ticket_booking?serverTimezone=UTC
 db.login=root
 db.password=root
 db.driver=com.mysql.cj.jdbc.Driver
+db.dialect=org.hibernate.dialect.MySQL5Dialect
+db.hbm2ddl_auto=update
+# Connection hibernate or jdbc
+db.connection=jdbc
